<resources>
    <string name="app_name">Hold \'em Odds</string>
    <string name="add_player">Add Player</string>
    <string name="remove_player">Remove Player</string>
    <string name="unknown_card">Unknown\nCard</string>
    <string name="calculate">Calculate</string>
    <string name="tie">Tie:</string>
    <string name="win">Win:</string>

    <string name="ace">A</string>
    <string name="king">K</string>
    <string name="queen">Q</string>
    <string name="jack">J</string>
    <string name="ten">10</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>

    <string name="royal_flush">Royal Flush:</string>
    <string name="straight_flush">Straight Flush:</string>
    <string name="four_of_a_kind">Four of a Kind:</string>
    <string name="full_house">Full House:</string>
    <string name="flush">Flush:</string>
    <string name="straight">Straight:</string>
    <string name="three_of_a_kind">Three of a Kind:</string>
    <string name="two_pair">Two Pair:</string>
    <string name="pair">Pair:</string>
    <string name="high_card">High Card:</string>

    <string name="flop">Flop</string>
    <string name="turn">Turn</string>
    <string name="river">River</string>


</resources>
