<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/choose_card_popup"
    android:orientation="horizontal" android:layout_width="wrap_content"
    android:gravity="center_horizontal"
    android:layout_height="wrap_content"
    android:background="@color/popup_background"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioGroup
            android:id="@+id/choose_suit"
            android:tag="choose_suit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp">

            <RadioButton
                android:id="@+id/clubs"
                android:tag="clubs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/clubs"
                android:drawableEnd="@drawable/clubs"
                style="@style/radio_button_color"/>
            <RadioButton
                android:id="@+id/diamonds"
                android:tag="diamonds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/diamonds"
                android:drawableEnd="@drawable/diamonds"
                style="@style/radio_button_color"/>
            <RadioButton
                android:id="@+id/spades"
                android:tag="spades"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/spades"
                android:drawableEnd="@drawable/spades"
                style="@style/radio_button_color"/>
            <RadioButton
                android:id="@+id/hearts"
                android:tag="hearts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/hearts"
                android:drawableEnd="@drawable/hearts"
                style="@style/radio_button_color"/>
        </RadioGroup>
        <Button
            android:id="@+id/choose_unknown_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/unknown_card"/>
    </LinearLayout>


    <RadioGroup
        android:id="@+id/choose_value"
        android:tag="choose_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp">
        <RadioButton
            android:id="@+id/ace"
            android:tag="ace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ace"
            style="@style/radio_button_color" />
        <RadioButton
            android:id="@+id/king"
            android:tag="king"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/king"
            style="@style/radio_button_color"/>
        <RadioButton
            android:id="@+id/queen"
            android:tag="queen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/queen"
            style="@style/radio_button_color"/>
        <RadioButton
            android:id="@+id/jack"
            android:tag="jack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jack"
            style="@style/radio_button_color"/>
        <RadioButton
            android:id="@+id/ten"
            android:tag="ten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ten"
            style="@style/radio_button_color"/>
        <RadioButton
            android:id="@+id/nine"
            android:tag="nine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nine"
            style="@style/radio_button_color"/>
        <RadioButton
            android:id="@+id/eight"
            android:tag="eight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eight"
            style="@style/radio_button_color"/>
        <RadioButton
            android:id="@+id/seven"
            android:tag="seven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seven"
            style="@style/radio_button_color"/>
        <RadioButton
            android:id="@+id/six"
            android:tag="six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/six"
            style="@style/radio_button_color"/>
        <RadioButton
            android:id="@+id/five"
            android:tag="five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/five"
            style="@style/radio_button_color"/>
        <RadioButton
            android:id="@+id/four"
            android:tag="four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four"
            style="@style/radio_button_color"/>
        <RadioButton
            android:id="@+id/three"
            android:tag="three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three"
            style="@style/radio_button_color"/>
        <RadioButton
            android:id="@+id/two"
            android:tag="two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two"
            style="@style/radio_button_color"/>
    </RadioGroup>

</LinearLayout>